--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<jackson.mapper.version>1.5.6</jackson.mapper.version>
-         <spring-cloud-aws-version>1.0.4.RELEASE</spring-cloud-aws-version>
+         <spring-cloud-aws-version>1.2.1.RELEASE</spring-cloud-aws-version>
 	</properties>
 
 	<dependencies>
@@ -56,16 +56,23 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-aws-context -->
+		<!-- <dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-aws-context</artifactId>
+		    <version>2.0.0.RELEASE</version>
+		</dependency> -->
+		
 		<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-aws-context</artifactId>
             <version>${spring-cloud-aws-version}</version>
         </dependency>
-        <dependency>
+        <!-- <dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
-		</dependency>
+		</dependency> -->
 		<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-aws-jdbc</artifactId>
